k8s/cluster2/base/jfrog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jfrog-ingress-lab
  namespace: jfrog
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: lab.jfrog.worldl.xpt
      http:
        paths:
          - backend:
              service:
                name: jfrog-artifactory-jcr
                port:
                  number: 8082
            path: /
            pathType: ImplementationSpecific
          - backend:
              service:
                name: jfrog-artifactory-jcr
                port:
                  number: 8081
            path: /artifactory/
            pathType: ImplementationSpecific
